# Aureolab

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CodeAnalysis.ruleset  README.md
Aureolab/assets/scenes/: first.scene
Aureolab/assets/shaders/: BasicShader.glsl  Outline.glsl  SelectionShader.glsl  SolidColor.glsl
Aureolab/src/: Aureolab.cpp  Aureolab.h  CMakeLists.txt  Log.cpp  Log.h
Aureolab/src/Core/: Application.cpp  Application.h  EntryPoint.h  GraphicsContext.cpp  GraphicsContext.h  ImGuiHelper.cpp  ImGuiHelper.h  Input.cpp  Input.h  Layer.h  LayerList.cpp  LayerList.h  Log.cpp  Log.h  Math.cpp  Math.h  Window.cpp  Window.h
Aureolab/src/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Aureolab/src/Modeling/: Modeling.cpp  Modeling.h
Aureolab/src/Platform/: OpenGLContext.cpp  OpenGLContext.h  Platform.h  WindowsWindow.cpp  WindowsWindow.h
Aureolab/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLGraphicsAPI.cpp  OpenGLGraphicsAPI.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexSpecification.cpp  OpenGLVertexSpecification.h
Aureolab/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsPlatformUtils.h  WindowsWindow.cpp
Aureolab/src/Renderer/: EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsAPI.cpp  GraphicsAPI.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexSpecification.h
Aureolab/src/Scene/: Components.cpp  Components.h  Scene.cpp  Scene.h
Aureolab/vendors/: CMakeLists.txt
Aureolab/vendors/cereal/: CMakeLists.txt
Aureolab/vendors/entt/: CMakeLists.txt
Aureolab/vendors/glad/: CMakeLists.txt
Aureolab/vendors/glfw/: CMakeLists.txt
Aureolab/vendors/glm/: CMakeLists.txt
Aureolab/vendors/imgui/: CMakeLists.txt
Aureolab/vendors/imguizmo/: CMakeLists.txt
Aureolab/vendors/spdlog/: CMakeLists.txt
Aureolab/vendors/stb/: CMakeLists.txt
Aureolab/vendors/tinyobjloader/: CMakeLists.txt
Aureolab/vendors/vkmemalloc/: CMakeLists.txt
Aureolab/vendors/vulkan/: CMakeLists.txt
DependencyTestBed/: CMakeLists.txt  DependencyTestBed.cpp  ObjectSelection.cpp  StartingExample.cpp  StartingExample.h  UniformBuffer.h  UniformBuffers.cpp  Utilities.h
Editor/: CMakeLists.txt  Editor.cpp  EditorLayer.cpp  EditorLayer.h  ExampleScene.h
Editor/Panels/: InspectorPanel.cpp  InspectorPanel.h  MainMenuBar.cpp  MainMenuBar.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
ShaderBoy/: CMakeLists.txt  FileWatcher.h  ShaderBoy.cpp  ShaderLayer.h
ShaderBoy/shaders/: Cellular.glsl  Default.glsl  Escher-CubicSpaceDivision.glsl  Mandelbrot.glsl  MetaBalls.glsl  OnLightAndShadows.glsl  Tunnel.glsl
TestBed/: CMakeLists.txt  Layer1.h  Layer2.h  Layer3.h  TestBed.cpp
TestBed/assets/: BasicShader.glsl  PointSprite.glsl  VertexColor2D.glsl
VulkanRenderer/: CMakeLists.txt  Example.h  Example01.h  Example02.h  Example03.h  Example04.h  Example05.h  IResizable.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  Types.h  VulkanContext.cpp  VulkanContext.h  VulkanDestroyer.h  VulkanObjects.cpp  VulkanObjects.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanWindow.cpp  VulkanWindow.h  Window.cpp  Window.h  main.cpp
VulkanRenderer/Examples/: Example.h  Example01.h  Example02.h  Example03.h  Example04.h  Example05.h  Example06.h  Example07.h  Example08.h
VulkanRenderer/VulkanObjects/: Allocator.cpp  Allocator.h  DebugMessenger.cpp  DebugMessenger.h  Device.cpp  Device.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  VulkanInstance.cpp  VulkanSurface.cpp  VulkanSurface.h
VulkanRenderer/assets/shaders/: compile.bat  default-vert.spv  default.vert  example-04-desc-set-vert.spv  example-04-desc-set.frag  example-05-textured-frag.spv  example-05-textured.frag  example-push-const-vert.spv  example-push-const.vert  example-square-vert.spv  example-square.vert  example-vertex-attr-vert.spv  example-vertex-attr.vert  visualize-normal-frag.spv  visualize-normal.frag  visualize-solid-color-frag.spv  visualize-solid-color.frag  visualize-uv-frag.spv  visualize-uv.frag
VulkanStudy/: CMakeLists.txt  main.cpp
VulkanStudy/assets/shaders/: compile.bat  shader-frag.spv  shader.frag
